--- a/BotsfordBackend/package.json
+++ b/BotsfordBackend/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.7.2"
+    "@azure/functions": "^4.7.2",
+    "botbuilder": "^4.17.0-blobs1"
   },
   "devDependencies": {
     "azure-functions-core-tools": "^4.x"
