--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js"
+  "main": "messages/index.js"
   "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
