fix: Force Oryx build and revert test message

--- a/.github/workflows/main_botsford-backend.yml
+++ b/.github/workflows/main_botsford-backend.yml
@@ -42,3 +42,4 @@ jobs:
           app-name: 'Botsford-Backend'
           slot-name: 'Production'
           package: '.'
+          enable-oryx-build: true
